# multi-agent-support

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  api.py  llm_client.py  pipeline.py  schemas.py
datasets/: eval_seed.jsonl
docs/: ARCHITECTURE.md  EVAL_DATASET.md  TASK.md
docs/prompts/: BUG_AGENT.md  DISPATCHER.md  INFO_AGENT.md  STATUS_AGENT.md
flows/: mass-v1.json
knowledge_base/: info_kb_retrieval.md
reports/: eval_report.json  eval_report_langflow.json  predictions.jsonl  predictions_langflow.jsonl
scripts/: eval_runner.py  run_eval.py  run_eval_langflow.py  run_langflow_api.py
