[project]
name = "multi-agent-support-system"
version = "0.1.0"
description = "AI-powered customer support automation using Langflow, RAG, Tool Calling and Multi-Agent orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langflow>=1.8.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
