[project]
name = "multi-agent-support-system"
version = "0.1.0"
description = "AI-powered customer support automation using Langflow, RAG, Tool Calling and Multi-Agent orchestration"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.121.1",
    "langflow>=1.8.4",
    "openai>=2.8.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = [
	# line-too-long
  "E501",
]

[tool.mypy]
python_version = "3.13"
strict = true
cache_dir = ".cache/mypy"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
